tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-43/test000001.readonly.err
Error: memory error: object read only
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c
Line: 16
Stack: 
	#0 00000037 in remove_from_list (head=33073216, node=33157728) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c:16
	#1 00000090 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c:40
