tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-43/test000001.pc
array a1[24] : w32 -> w8 = symbolic
(query [(Eq false
            (Eq 33157728
                N0:(ReadLSB w64 16 a1)))
        (Ult (Add w64 18446603590093322544 N0) 1)]
       false)
